Chapter07/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
      - name: hello-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: gcr.io/qwiklabs-gcp-01-69ec38c49945/react-hello:v1
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 3001
