Chapter07/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello-app
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: gcr.io/qwiklabs-gcp-04-39befbcf7851/react-hello:v1
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 3001
      - name: hello-server
        # Replace $LOCATION with your Artifact Registry location (e.g., us-west1).
        # Replace $GCLOUD_PROJECT with your project ID.
        image: gcr.io/qwiklabs-gcp-04-39befbcf7851/node-server:v1
        # This app listens on port 8080 for web traffic by default.
        ports:
        - containerPort: 4000
