Chapter07/client-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: client-service 
spec:
    type: ClusterIP
    selector:
        component: client
    ports:
     -   port: 3000
         targetPort: 3000
