Chapter07/server-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-service
spec:
    type: NodePort
    selector:
        component: api
    ports:
         - port: 8080
           targetPort: 4000
           protocol: TCP
           name: http
